# src/modules/product/router/index.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"github.com/eriawan06/go-test-sagara/src/modules/product"
+	"github.com/eriawan06/go-test-sagara/src/shared"
 	"github.com/labstack/echo/v4"
 )
 
@@ -11,4 +12,6 @@ func Init(api *echo.Group) {
 	api.POST("/products", product.GetController().Create())
 	api.PUT("/products/:productId", product.GetController().Update())
 	api.DELETE("/products/:productId", product.GetController().Delete())
+	api.POST("/products/image/upload", shared.FileUpload())
+	api.GET("/products/image/:filename", shared.FileServe())
 }
